# haskell-github-updater

./: LICENSE  Main.hs  README.md  Tester.hs  Trash.hs  apache-vhost-example  githubupdater.cabal  install-and-test.sh
